--- a/app.css
+++ b/app.css
@@ -1,4 +1,8 @@
-#game div {
+body {
+  background-color: wheat;
+}
+
+#game-board div {
     border: 1px solid black;
     border-radius: 5px;
     width: 15%;
@@ -8,18 +12,48 @@
   }
 
   h1 {
-      font-family: fantasy;
+    font-family: fantasy;
+    text-align: center;
+    font-size: 3rem;
+    width: 50%;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    background-color: linen;
   }
 
-  h2 {
-      font-family: fantasy;
+  #game-controls {
+    border: 1px solid gray;
+    background-color: linen;
+    border-radius: 10px;
+    width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+  }
+
+  #game-controls h2 {
+    display: block;
+    font-family: fantasy;
+    font-size: 2.5rem;
   }
 
   #start-btn {
-      border-radius: 4px;
-      width: 150px;
-      height: 50px;
-      font-size: 1.1rem;
-      background-color: blue;
-      color: whitesmoke;
+    display: block;
+    border-radius: 4px;
+    width: 150px;
+    height: 50px;
+    margin-bottom: 30px;
+    font-size: 1.1rem;
+    background-color: blue;
+    color: whitesmoke;
   }
+
+  
